2010-01-21  Tony Chang  <tony@chromium.org>

Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=25501
        Remove empty font tags when applying a style to a content editable
        region.

        * editing/execCommand/change-font.html: Added.
        * editing/execCommand/change-font-expected.txt: Added.
2010-01-21  Tony Chang  <tony@chromium.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=25501
        Remove empty font tags when applying a style to a content editable
        region.

        Test: editing/execCommand/change-font.html

        * editing/ApplyStyleCommand.cpp:
        (WebCore::isEmptyFontTag):

Canonical link: https://commits.webkit.org/45079@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53680 268f45cc-cd09-0410-ab3c-d52691b4dbfc